# web3db

./: .gitignore  Makefile  pyproject.toml  requirements.txt  scripts.py  setup.py
web3db/: __init__.py  base.py  core.py
web3db/models/: __init__.py  base.py  binance.py  bitget.py  bybit.py  deposit.py  discord.py  email.py  github.py  mexc.py  mixins.py  okx.py  profile.py  proxy.py  twitter.py
web3db/utils/: __init__.py  encrypt_private.py  env.py  logger.py
