[tool.poetry]
name = "web3db"
version = "1.0.4"
description = "Database for web3"
authors = ["timertimertimer <timerkhan2002@gmail.com>"]
repository = "https://github.com/timertimertimer/web3db"
packages = [{include = "web3db"}]

[tool.poetry.dependencies]
python = "^3.10"
base58 = "^2.1.1"
loguru = "^0.7.2"
solana = "^0.33.0"
asyncpg = "^0.29.0"
aptos-sdk = "0.7.1"
SQLAlchemy = "^2.0.29"
eth-account = "^0.11.0"
python-gnupg = "^0.5.2"
bitcoin-utils = "^0.6.6"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
