[project]
name = "web3db"
version = "1.0.15"
description = "Database for web3"
authors = [{ name = "timertimertimer", email = "timerkhan2002@gmail.com" }]
requires-python = "~=3.10"
dependencies = [
    "base58>=2.1.1,<3",
    "loguru>=0.7.3,<0.8",
    "aptos-sdk>=0.8.6,<0.9",
    "SQLAlchemy>=2.0.29,<3",
    "eth-account>=0.13.0,<0.14",
    "python-gnupg>=0.5.3,<0.6",
    "bitcoin-utils>=0.6.6,<0.7",
    "python-dotenv>=1.0.1,<2",
    "aiosqlite>=0.20.0,<0.21",
    "alembic>=1.13.1,<2",
    "solders>=0.23.0,<0.24",
    "pydantic-settings>=2.9.1",
]

[project.urls]
Repository = "https://github.com/timertimertimer/web3db"

[dependency-groups]
dev = ["bitcoinlib>=0.6.15,<0.7"]

[tool.hatch.build.targets.sdist]
include = ["web3db"]

[tool.hatch.build.targets.wheel]
include = ["web3db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
